--- a/WebSites/Petshopv2/Web.config
+++ b/WebSites/Petshopv2/Web.config
@@ -8,7 +8,8 @@
 <configuration>
   
    <connectionStrings>
-    <add name="petshoppeConnstr" connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=C:\Users\OEM\Documents\Visual Studio 2013\WebSites\Petshopv2\App_Data\Database.mdf;Integrated Security=True;Connect Timeout=30"/>
+    <add name="petshoppeConnstr" connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=C:\Users\OEM\Desktop\Project2\19Nov2015\WebSites\Petshopv2\App_Data\Database.mdf;Integrated Security=True"/>
+   
   </connectionStrings>
 
     <system.web>
