--- a/WebSites/Petshopv2/Web.config
+++ b/WebSites/Petshopv2/Web.config
@@ -17,4 +17,9 @@
       <httpRuntime targetFramework="4.5" />
     </system.web>
 
+
+    <system.web>
+      <customErrors mode="Off"/>
+    </system.web>
+
 </configuration>
