--- a/WebSites/Petshopv2/Web.config
+++ b/WebSites/Petshopv2/Web.config
@@ -8,8 +8,7 @@
 <configuration>
   
    <connectionStrings>
-    <add name="petshoppeConnstr" connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=C:\Users\OEM\Desktop\Project2\19Nov2015\WebSites\Petshopv2\App_Data\Database.mdf;Integrated Security=True"/>
-   
+    <add name="petshoppeConnstr" connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=C:\Users\OEM\Desktop\271115\19Nov2015\WebSites\Petshopv2\App_Data\Database.mdf;Integrated Security=True"/>
   </connectionStrings>
 
     <system.web>
