--- a/WebSites/Petshopv2/Web.config
+++ b/WebSites/Petshopv2/Web.config
@@ -7,10 +7,9 @@
 
 <configuration>
   
-   <connectionStrings>
-    <add name="petshoppeConnstr" connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=C:\Users\OEM\Desktop\Project2\19Nov2015\WebSites\Petshopv2\App_Data\Database.mdf;Integrated Security=True"/>
-   
-  </connectionStrings>
+     <connectionStrings>
+    <add name="petshoppeConnstr" connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=C:\Users\OEM\Desktop\Project2\19Nov2015\WebSites\Petshopv2\App_Data\Database.mdf;Integrated Security=SSPI"/>
+   </connectionStrings>
 
     <system.web>
       <compilation debug="true" targetFramework="4.5" />
@@ -18,3 +17,5 @@
     </system.web>
 
 </configuration>
+
+
